[package]
name = "keypress_racer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window","Document","Element","HtmlElement","KeyboardEvent","Performance",
  "EventTarget","Storage","CssStyleDeclaration"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
